<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flavour_pizza">

    <RelativeLayout
        android:layout_width="98sp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/re"
        />
    <Button
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/text"
        android:textSize="15sp"
        android:id="@+id/btnhome"/>
    <Button
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/Ord"
        android:textSize="15sp"
        android:layout_below="@+id/btnhome"
        android:id="@+id/btnord"/>
    <RelativeLayout
        android:layout_width="488sp"
        android:layout_height="match_parent"
        android:background="#000000"
        android:layout_toRightOf="@+id/re"
        android:id="@+id/relative">

        <Button
            android:layout_width="120sp"
            android:layout_height="70sp"
            android:text="@string/smokey"
            android:textSize="15sp"
            android:id="@+id/lounge"
            android:background="#FF9188"
            android:layout_marginTop="2sp"/>

        <Button
            android:id="@+id/chicken"
            android:layout_width="120sp"
            android:layout_height="70sp"
            android:layout_marginLeft="2sp"
            android:layout_toRightOf="@+id/lounge"
            android:background="#FF9188"
            android:text="@string/tikka"
            android:textSize="15sp"
            android:layout_marginTop="2sp"
            />
        <Button
            android:layout_width="120sp"
            android:layout_height="70sp"
            android:text="@string/thin"
            android:layout_toRightOf="@+id/chicken"
            android:textSize="15sp"
            android:background="#FF9188"
            android:layout_marginTop="2sp"
            android:layout_marginLeft="2sp"
            android:id="@+id/beef"/>
        <Button
            android:layout_width="120sp"
            android:layout_height="70sp"
            android:background="#FF9188"
            android:text="@string/cheese"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/beef"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="2sp"
            android:id="@+id/veggie"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="3dp"
        android:weightSum="2"
        android:layout_toRightOf="@id/relative"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="01"
            android:layout_width="match_parent"
            android:text="Shopping Cart"
            android:padding="20dp"
            android:textSize="30dp">
        </TextView>
    </LinearLayout>
</RelativeLayout>