<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".price">
    <RelativeLayout
        android:layout_width="98sp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/re"
        />
    <Button
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/text"
        android:textSize="15sp"
        android:id="@+id/btnhome"/>
    <Button
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:text="@string/Ord"
        android:textSize="15sp"
        android:layout_below="@+id/btnhome"
        android:id="@+id/btnord"/>
    <RelativeLayout
        android:layout_width="488sp"
        android:layout_height="match_parent"
        android:background="#000000"
        android:layout_toRightOf="@+id/re"
        android:id="@+id/relative">

        <Button
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:text="@string/small"
            android:textSize="17sp"
            android:id="@+id/lounge"
            android:background="#FF9188"
            android:layout_marginTop="2sp"
            android:onClick="smallpizza"/>

        <Button
            android:id="@+id/chicken"
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:layout_marginLeft="2sp"
            android:layout_toRightOf="@+id/lounge"
            android:background="#FF9188"
            android:text="@string/medium"
            android:textSize="16sp"
            android:layout_marginTop="2sp"
            android:onClick="medium"
            />
        <Button
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:text="@string/large"
            android:layout_toRightOf="@+id/chicken"
            android:textSize="16sp"
            android:background="#FF9188"
            android:layout_marginTop="2sp"
            android:layout_marginLeft="2sp"
            android:id="@+id/beef"
            android:onClick="large"
            />
        <Button
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:background="#FF9188"
            android:text="@string/Extra_large"
            android:textSize="17sp"
            android:layout_toRightOf="@+id/beef"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="2sp"
            android:id="@+id/veggie"
            android:onClick="extra"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_toRightOf="@id/relative"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="01"
            android:layout_width="match_parent"
            android:text="Shopping Cart"
            android:padding="20dp"
            android:textSize="30dp">
        </TextView>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/relative"
    android:layout_marginTop="60dp">
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantity:"
        android:padding="10dp"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantity"
        android:textSize="20sp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/relative"
        android:layout_marginTop="120dp">
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount:"
            android:padding="10dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount"
            android:textSize="20sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_checkout"
        android:layout_gravity="center"
        android:layout_toRightOf="@id/relative"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="ChECKOUT"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"/>
</RelativeLayout>